# ssb-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
results/: visualize.py
sql/: load.sql
src/: common.hpp  main.cpp
src/queries/: q1.cpp  q2.cpp  q3.cpp  q4.cpp
